Refactor immutable factory methods as identified by IntelliJ (#3467)
Identified and resolved by IntelliJ:

- [Immutable collection creation can be replaced with collection factory
call﻿](https://www.jetbrains.com/help/inspectopedia/Java9CollectionFactory.html)

GitOrigin-RevId: 8d959455d7bc6f464d0dc5ba4c5065b8c2e340be